# mspacman

./: Cargo.toml  LICENSE  readme.md
src/: error.rs  main.rs  pman.rs  structs.rs  utils.rs  version.rs
src/structs/: appstate.rs  event.rs  focus.rs  mod.rs  package.rs  packageupdate.rs  reason.rs  tab.rs  timedstring.rs
src/widgets/: installed.rs  mod.rs  packages.rs  table.rs  update.rs
