[package]
name = "mspacman"
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/griccardos/mspacman"
repository = "https://github.com/griccardos/mspacman"
readme = "readme.md"
description = "pacman package dependency viewer"
keywords = ["pacman", "archlinux", "arch", "package"]
authors = ["griccardos"]
categories = ["command-line-utilities"]


[[bin]]
name = "ms"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"                             #cannot upgrade until tui-textarea supports it
jiff = "0.2"                                   #for dates
ratatui = "0.29"
tui-textarea = "0.7"                           #for text input
uuid = { version = "1.18", features = ["v4"] }
