[package]
name = "mspacman"
version = "0.8.1"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/griccardos/mspacman"
repository = "https://github.com/griccardos/mspacman"
readme = "readme.md"
description = "pacman package dependency viewer"
keywords = ["pacman", "archlinux", "arch", "package"]
authors = ["griccardos"]
categories = ["command-line-utilities"]

[[bin]]
name = "ms"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"                               #tui    
tui-textarea = "0.7"                           #for text input
jiff = "0.2"                                   #for dates
uuid = { version = "1.19", features = ["v4"] } #for unique ids
